[project]
name = "ai-roleplay-trainer"
version = "0.1.0"
description = "AI-Powered Agentic Roleplay Training Environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.64.0",
    "openai>=1.105.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
